upgrade to docusaurus 2.0.beta.15 & squash bug

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -212,7 +212,7 @@ code {
 }
 
 /* Adjusts and aligns landing page content */
-.row {
+[class*=features] > [class=container] > [class=row] {
   align-items: baseline;
   justify-content: center;
 }
